# PersonalProjects

./: README.md  ndp_ticket_bot.py
42SingaporePiscine/bsq/: main.c
42SingaporePiscine/rush01/: calc_boundary.c  calc_boundary_helpers.c  find_solution.c  initialise.c  is_matching.c  main.c  print_solution.c  rush01.h
AI_IDS_Project/: README.md
AI_IDS_Project/scripts/: ids_model.py  preprocess.py
CSCI368 Network Security/: Notes.md
CSCI368 Network Security/Assignments/: Explanation_Of_Steps.docx
CSCI368 Network Security/InteractiveStudyBuddy_Claude/: network-security-dashboard.html  network-security-studybuddy.html
CSCI368 Network Security/Questions From Chat Claude/: Lecture 1 Intro_ Questions.docx  Lecture 6 LinkLayerSecurity Questions.docx  Lecture 7 NetworkSecurityTools Questions.docx  Lecture 8 Post Quantum Security Questions.docx  (+5 more)
Classical_Encryption-Decryption-Tool/: README.md  encrypted_sample.txt  encryption.cpp  encryption.h  main.cpp  run
Hardcoded Encryption Key Exploitation/: README.md
ISIT 312 Big Data Management/: ISIT312 Lecture Recordings Cleaned Transcripts.docx  LabWork_Assignment CheatSheet.docx
Linux_Enumeration/: README.md  linenum.sh
Malware_Detection_With_AI/: deploy.py  malware_detection.py  readme.md  requirements.txt
Passman/: .gitignore  README.md  docker-compose.yml
Project Thretica/: readme.md
SpotifySecurityExt/: README.md
TrustTrack_WPHDigital/: readme.md
VapeWatchSG/: readme.md
WebAppSecTool/: README.md  pyproject.toml  requirements.txt
WebAppSecTool/docs/: index.md
WebAppSecTool/reports/: JuiceShop_report.html  JuiceShop_report.json  JuiceShop_report.txt
WebAppSecTool/src/vul_scanner/: __init__.py  __main__.py  api_security_scanner.py  auth_scanner.py  crawler.py  reporter.py  scanner.py  security_headers_scanner.py  sql_injection_scanner.py  utils.py  xss_scanner.py
WebAppSecTool/tests/: __init__.py  test_crawler.py  test_reporter.py  test_scanner.py
encyption_tools/: README.md  requirements.txt  sample_terminal_output.txt
giveaway_bot_server/: Dockerfile  README.md  emailgen.py  extractor.py  gleam_entry.py  main.py  parser.py  requirements.txt
kernal_rootkit_project/: Makefile  README.md  hook_module.c  rootkit_module.c  simple_module.c
mimic printf C Programming/: README.md  printf.c  printf_main.c
monoalphabetic_cipher/: readme.md  substitution_cipher.py
(+191 files in other folders)
