[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web_vulnerability_scanner"
version = "1.0.0"
description = "A comprehensive tool to identify and report security vulnerabilities in web applications."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["security", "vulnerability scanner", "web application", "cybersecurity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "requests==2.27.1",
    "beautifulsoup4==4.10.0",
    "urllib3==1.26.7",
    "Flask==2.0.2",
    "SQLAlchemy==1.4.27",
    "PyYAML==6.0",
    "PyJWT==2.3.0",
    "pytz==2021.3",
    "reportlab==3.6.2",
    "pandas==1.3.4",
    "bcrypt==3.2.0",
    "validators==0.18.2",
    "lxml==4.6.4",
    "click==8.0.3",
    "Flask-Cors==3.0.10",
    "python-dotenv==0.19.2",
    "paramiko==2.8.0",
    "scapy==2.4.5",
    "cryptography==36.0.0",
    "Flask-RESTful==0.3.9",
    "flask-swagger-ui==3.36.0",
    "Flask-JWT-Extended==4.3.1",
    "Flask-Session==0.4.0",
    "Flask-Caching==1.10.1",
    "Flask-Migrate==3.1.0",
    "Flask-Talisman==1.0.0",
    "marshmallow==3.14.1",
    "marshmallow-sqlalchemy==0.26.1",
    "WTForms==3.0.0",
    "Flask-Mail==0.9.1",
    "Flask-Admin==1.5.8",
    "Flask-Login==0.5.0",
    "Flask-Security==3.0.0",
    "Flask-SocketIO==5.1.1",
    "Flask-Redis==0.4.0",
    "Flask-PyMongo==2.3.0"
]

[project.optional-dependencies]
testing = [
    "pytest==6.2.5",
    "flake8==4.0.1"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/web_vulnerability_scanner"
"Documentation" = "https://github.com/yourusername/web_vulnerability_scanner/wiki"
"Source" = "https://github.com/yourusername/web_vulnerability_scanner"
"Tracker" = "https://github.com/yourusername/web_vulnerability_scanner/issues"